classDiagram
    class User {
        +id: Integer
        +username: String
        +email: String
        +image_file: String
        +password: String
        +access_token: String
        +cursor: String
        +get_reset_token()
        +verify_reset_token()
    }

    class Post {
        +id: Integer
        +title: String
        +date_posted: DateTime
        +content: Text
        +user_id: Integer
    }

    class Transaction {
        +id: Integer
        +plaid_transaction_id: String
        +user_id: Integer
        +amount: Numeric
        +date: DateTime
        +name: String
        +merchant_name: String
        +category: String
        +category_id: String
        +pending: Boolean
        +account_id: String
        +account_name: String
        +payment_channel: String
        +authorized_date: DateTime
        +created_at: DateTime
        +updated_at: DateTime
        +from_plaid_transaction()
        +to_dict()
    }

    class Balance {
        +id: Integer
        +user_id: Integer
        +plaid_account_id: String
        +name: String
        +official_name: String
        +type: String
        +subtype: String
        +current_balance: Numeric
        +available_balance: Numeric
        +limit: Numeric
        +iso_currency_code: String
        +last_updated: DateTime
        +from_plaid_account()
        +to_dict()
    }

    User "1" --> "many" Post : has
    User "1" --> "many" Transaction : has
    User "1" --> "many" Balance : has